# game-sdl2-psvita

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: .clang-format  game.cpp  game.hpp  main.cpp
src/engine/: common.cpp  common.hpp  engine.cpp  engine.hpp  graphics.cpp  graphics.hpp  sdl_wrap.cpp  sdl_wrap.hpp
